--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 .clearfix::after {
@@ -17,7 +18,7 @@
 }
 
 .nav-inner {
-    background-color: darkgrey; /*da cancellare*/
+    /* background-color: darkgrey; /*da cancellare*/
     width: 60%;
     height: 70px;
     margin: 0 auto;
@@ -36,18 +37,30 @@
     padding: 6px 12px;
     border-color: darkorange;
     border-radius: 2px;
+    border-style: ridge;
+    color: #FF7A59;
+    cursor: pointer;
+}
+
+.get {
+    padding: 8px 14px;
+    background-color: #FF7A59;
+    border-color: #FF7A59;
+    border-style: none;
+    color: white;
+    cursor: pointer;
 }
 
 header {
     height: 80px;
     width: 100%;
-    background-color: red; /*da cancellare*/
+    /* background-color: red; da cancellare*/
 }
 
 .header-inner {
     height: 80px;
     width: 60%;
-    background-color: orange; /*da cancellare*/
+    /* background-color: orange; da cancellare*/
     margin: 0 auto;
     line-height: 80px;
 }
@@ -61,14 +74,16 @@ header {
 }
 
 .nav-link li {
+    font-weight: bold;
     list-style: none;
     float: left;
     padding-left: 5px;
     padding-right: 5px;
 }
 
-section {
-    background-color: lightblue;
+.blue {
+    /* background-color: lightblue; da cancellare */
+    background-color: #425B76;
     width: 100%;
     height: 80px;
     line-height: 80px;
@@ -77,7 +92,11 @@ section {
 .section-inner {
     width: 60%;
     margin: 0 auto;
+}
 
+#section-p {
+    color: white;
+    font-size: 13px;
 }
 
 .section-inner-left {
@@ -88,14 +107,26 @@ section {
     float: right;
 }
 
+.learn {
+    color: #425B76;
+    font-weight: bold;
+    border-style: none;
+    border-radius: 3px;
+    padding: 8px 16px;
+    cursor: pointer;
+}
+
 main {
-    background-color: pink; /*da cancellare*/
+    background-image: url("../img/sfondo2.jpg");
+    background-color: #FFF2EE;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 600px;
     width: 100%;
 }
 
 .main-inner {
-    background-color: darkred; /*da cancellare*/
     width: 60%;
     height: 100%;
     margin: 0 auto;
@@ -103,10 +134,79 @@ main {
 }
 
 .content {
-
-    background-color: darkviolet; /*da cancellare*/
+    /* background-color: darkviolet; da cancellare*/
     width: 40%;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.container-top {
+    display: inline-block;
+    color: #33475B;
+    margin-bottom: 30px;
+    font-size: 22px;
+    font-weight: 900;
+}
+
+.container-middle {
+    color: #33475B;
+    font-size: 12px;
+    line-height: 1.7;
+}
+
+.container-bottom .get2 {
+    padding: 22px 34px;
+    background-color: #FF7A59;
+    border-color: #FF7A59;
+    border-style: none;
+    font-weight: bold;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.container-bottom p {
+    font-size: 12px;
+    color: #33475B;
+}
+
+.alone {
+    width: 100%;
+    height: 450px;
+    background-color: #f5f8fa;
+    position: relative;
+}
+
+.alone-inner {
+    width: 60%;
+    height: 300px;
+    background-color: #f5f8fa;
+    margin: 0 auto;
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    right: auto;
+}
+
+.rubik {
+    width: 260px;
+    height: 195px;
+    margin-left: 35%;
+    margin-right: 35%;
+}
+
+.powerful {
+    text-align: center;
+    color: #33475b;
+    font-size: 30px;
+}
+
+#offers {
+    text-align: center;
+    color: #33475b;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
