--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
 }
 
 .nav-inner {
-    /* background-color: darkgrey; /*da cancellare*/
     width: 60%;
     height: 70px;
     margin: 0 auto;
@@ -29,8 +28,28 @@
     float: left;
 }
 
+.p1 {
+    cursor: pointer;
+}
+
+.p2{
+    cursor: pointer;
+}
+
 .nav-inner-right {
     float: right;
+}
+
+.search {
+    background-image: url("https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/_style-guide/sword-sprocket/search%20icon.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-style: none;
+    background-color: none;
+    width: 18px;
+    height: 18px;
+    margin-right: 20px;
+    cursor: zoom-in;
 }
 
 .log {
@@ -48,25 +67,25 @@
     border-color: #FF7A59;
     border-style: none;
     color: white;
+    margin-left: 10px;
     cursor: pointer;
 }
 
 header {
     height: 80px;
     width: 100%;
-    /* background-color: red; da cancellare*/
 }
 
 .header-inner {
     height: 80px;
     width: 60%;
-    /* background-color: orange; da cancellare*/
     margin: 0 auto;
     line-height: 80px;
 }
 
 #logo {
     vertical-align: middle;
+    cursor: pointer;
 }
 
 .nav-link {
@@ -79,10 +98,10 @@ header {
     float: left;
     padding-left: 5px;
     padding-right: 5px;
+    cursor: pointer;
 }
 
 .blue {
-    /* background-color: lightblue; da cancellare */
     background-color: #425B76;
     width: 100%;
     height: 80px;
@@ -134,7 +153,6 @@ main {
 }
 
 .content {
-    /* background-color: darkviolet; da cancellare*/
     width: 40%;
     position: absolute;
     top: 50%;
@@ -209,4 +227,113 @@ main {
     margin-top: 30px;
     margin-left: 30px;
     margin-right: 30px;
+}
+
+.cards {
+    background-color: #f5f8fa;
+    height: 1000px;
+    width: 100%;
+}
+
+.cardtop {
+    background-color: #ffffff;
+    width: 60%;
+    height: 300px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    position: relative;
+}
+
+.card1 {
+    width: 250px;
+    height: 670px;
+    background-color: grey;
+    float: left;
+    margin-left: 20%;
+    border-radius: 5px;
+}
+
+.card2 {
+    width: 250px;
+    height: 670px;
+    background-color: grey;
+    float: left;
+    margin-left: 30px;
+    border-radius: 5px;
+}
+
+.card3 {
+    width: 250px;
+    height: 670px;
+    background-color: grey;
+    float: left;
+    margin-left: 30px;
+    border-radius: 5px;
+}
+
+.info-top {
+    height: 250px;
+    width: 250px;
+    background-color: #ffffff;
+    margin-top: 25px;
+    margin-left: 30px;
+    position: absolute;
+    float: left;
+}
+
+.book {
+    width: 124px;
+    height: 150px;
+    position: relative;
+    margin-left: 24%;
+    margin-top: 5%;
+}
+
+.get2 {
+    padding: 14px 14px;
+    background-color: #FF7A59;
+    border-color: #FF7A59;
+    border-style: none;
+    color: white;
+    margin-left: 27%;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.text-top {
+    height: 250px;
+    width: 470px;
+    float: right;
+    background-color: #ffffff#ffffff;
+    position: relative;
+    margin-top: 25px;
+    margin-right: 30px;
+}
+
+#CRM {
+    color: #39475b;
+    font-size: 24px;
+    margin-top: 30px;
+}
+
+#text-p {
+    margin-top: 15px;
+    font-size: 15px;
+    color: #39475b;
+    margin-bottom: 15px;
+}
+
+#popular {
+    color: #39475b;
+}
+
+#popular::after {
+    content: "";
+    border-bottom: 1px solid #e0e6ed;
+    height: 5px;
+    top: 52%;
+    width: 70%;
+    left: 28%;
+    position: absolute;
 }
